2008-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Jam package version in script "show-platform" on "make dist".

	* Makefile.am (dist-hook): New target.

2008-03-03 Thien-Thi Nguyen <ttn@gnuvola.org>

	Release: 0.36 (tag v0.36)

	* configure.in (AC_INIT): Bump version to "0.36" for release.

2008-02-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop subdirectory "contrib".

	* contrib/Ian.Grant/abstractions.scm: Delete file.
	* contrib/Ian.Grant: Delete directory.
	* contrib/ttn/markup.scm: Delete file.
	* contrib/ttn: Delete directory.
	* contrib/README: Delete file.
	* contrib: Delete directory.

	* Makefile.am (EXTRA_DIST): Remove contrib.
	(.module-catalog): Update ignorance specification.

2008-02-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.35 (tag: v0.35)

	* configure.in (AC_INIT): Bump version to "0.35" for release.

2008-01-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Replace CVS-isms with Git-isms.

	* .cvsignore: Delete file.
	* doc/.cvsignore, scm/.cvsignore, test/.cvsignore: Likewise.
	* Makefile.am (.module-catalog): Ignore ".git", not "CVS".
	(dist-hook, cvs-state-summary): Delete targets.
	* autogen.sh, HACKING: Update.
	* .gitignore: New file.

2008-01-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* doc/guile-pg.twerp (Not Included): Remove entry for
	`PQescapeStringConn', `PQescapeByteaConn' and `PQunescapeBytea'.

2008-01-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* libpostgres.c (pg_escape_string_conn, pg_escape_bytea_conn)
	(pg_unescape_bytea): New GH_DEFPROCs.
	* doc/guile-pg.twerp (Miscellaneous): Add blurb and @twerpdoc for
	`pg-escape-string-conn', `pg-escape-bytea-conn' and `pg-unescape-bytea'.

2008-01-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* scm/postgres-qcons.scm (parse+make-SELECT-tree):
	Fix bug: Spell "INTERSECT" correctly.

2008-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* doc/guile-pg.twerp (qcons special operators): Fix typo.

2007-12-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
